edição da linguagem

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="#outras">Outras Habilidades</a></li>
     <ul>
       <h2> Otávio Vinícius Castro do Nascimento </h2>
-      <img src="./imagens/índice.jpeg" alt="Otávio sorrindo" width="200">
+      <img src="./imagens/índice.jpeg" alt="Otávio sorrindo" width="200px">
       <br>
       <p>
         Eu tenho, até a úĺtima edição desse site, 21 anos. Nasci em <strong>Recife-PE</strong>, mas moro, atualmente, em
