feat: Add Google site verification meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="87iRgNK2-PJEIRhno5IfAZhK62e2jDK0DfgkyrG7jMo" />
     <meta
       name="description"
       content="Potrifólio de Otávio Vinícius, desenvolvedor web full stack, com foco em ReactJS, React Native e NodeJS."
