--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="google-site-verification" content="87iRgNK2-PJEIRhno5IfAZhK62e2jDK0DfgkyrG7jMo" />
   <meta name="description"
     content="Potrifólio de Otávio Vinícius, desenvolvedor web full stack, com foco em ReactJS, React Native e NodeJS." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
@@ -25,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Otávio Vinícius</title>
+  <meta name="google-site-verification" content="87iRgNK2-PJEIRhno5IfAZhK62e2jDK0DfgkyrG7jMo" />
 </head>
 
 <body>
